--- a/calculator/.gitignore
+++ b/calculator/.gitignore
@@ -4,9 +4,10 @@ calculator/__pycache__/
 calculator/main/__pycache__/
 calculator/main/migrations/__pycache__/
 .coverage
-coverage/
 tmp/
+coverage/
 htmlcov/
 node_modules/
 db.sqlite3
 ./main/test/__pycache__/
+../.idea
